Including AWS certifications and k8s skills

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="text-primary">Felix de Moraes</span>
         </h1>
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 98100-3039 ·
-          <a href="mailto:rafaelfelix1433@gmail.com?Subject=Java" target="_top">rafaelfelix1433@gmail.com</a>
+          <a href="mailto:rafaelfelix1433@gmail.com?Subject=Professional Approach - Java" target="_top">rafaelfelix1433@gmail.com</a>
         </div>
         <p class="lead mb-5">I have experience in create and design solutions and software development for the cloud, using development best pratices and agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
         <div class="social-icons">
@@ -238,21 +238,21 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Centro Universitário Nossa Senhora do Patrocínio</h3>
-            <div class="subheading mb-3">Bachelor of Computer Science</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2007 - May 2016</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
             <h3 class="mb-0">FIAP</h3>
             <div class="subheading mb-3">Post Graduation in Software Architecture</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2023 - June 2024</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Centro Universitário Nossa Senhora do Patrocínio</h3>
+            <div class="subheading mb-3">Bachelor of Computer Science</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2007 - May 2016</span>
           </div>
         </div>
 
@@ -357,14 +357,19 @@
           </li>
           <li class="list-inline-item">
             <a href="https://docs.gitlab.com/ee/ci/">
-              <img src="img/gitlab-logo.png" alt="terraform" width="165" height="65">
+              <img src="img/gitlab-logo.png" alt="gitlab" width="165" height="65">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="https://docs.docker.com/">
-              <img src="img/docker_logo.png" alt="Swagger" width="100" height="85">
+              <img src="img/docker_logo.png" alt="docker" width="100" height="85">
             </a>
-        </li>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://kubernetes.io/pt-br/docs/home/">
+              <img src="img/k8s_logo.png" alt="k8s" width="140" height="95">
+            </a>
+          </li>
         </ul>
         <ul class="list-inline dev-icons">
           <h5>Databases</h5>
@@ -433,7 +438,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p><b>Hashtags: #awscloud, #innnovation, #agileculture, #javaarchitect, #javadevelopment</b></p>
+        <p><b>Hashtags: #awscloud, #innovation, #agileculture, #javaarchitect, #javadevelopment, #cleanarchitecture</b></p>
         <p>Apart from being a developer, I enjoy to spend most of my time with my family (my dogs and wife) and, sometimes, walking alone listening a good music.</p>
         <p class="mb-0">Also I appreciate a lot of sci-fi, investigation and fantasy genre movies and television shows, and I spend the rest of my free time between exploring and reading about the latest technology advancements and news in the development world and play video games. </p>
       </div>
@@ -448,14 +453,13 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             ETS/TOEIC Proficiency Level - B2</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            AWS Cloud Practitioner - AWS Certification</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            AWS Technical Accredited - AWS Certification</li>
           <!--<li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
