Include new skills

--- a/index.html
+++ b/index.html
@@ -342,12 +342,22 @@
                 <img src="img/Swagger-logo.png" alt="Swagger" width="60" height="60">
               </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://docs.gradle.org/current/userguide/userguide.html">
+              <img src="img/gradle_logo.png" alt="Swagger" width="120" height="65">
+            </a>
+        </li>
         </ul>
         <ul class="list-inline dev-icons">
           <h5>Cloud / DevOps</h5>
           <li class="list-inline-item">
             <a href="https://docs.aws.amazon.com/">
               <img src="img/aws_logo.png" alt="aws" width="80" height="50">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://learn.microsoft.com/pt-br/azure/">
+              <img src="img/azure_logo.jpg" alt="aws" width="80" height="70">
             </a>
           </li>
           <li class="list-inline-item">
@@ -370,23 +380,28 @@
               <img src="img/k8s_logo.png" alt="k8s" width="140" height="95">
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://docs.github.com/pt/actions">
+              <img src="img/github_logo.png" alt="gitlab" width="72" height="70">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://docs.sonarsource.com/sonarcloud/">
+              <img src="img/sonar_cloud.png" alt="gitlab" width="200" height="110">
+            </a>
+          </li>
         </ul>
         <ul class="list-inline dev-icons">
           <h5>Databases</h5>
-          <li class="list-inline-item">
-              <a href="https://dev.mysql.com/doc/">
-                <img src="img/mysql-logo.png" alt="MySQL" width="120" height="90">
-              </a>
-          </li>
           <li class="list-inline-item">
             <a href="https://docs.microsoft.com/en-us/sql/sql-server/?view=sql-server-ver15">
               <img src="img/sql-logo.png" alt="SQL Server" width="90" height="90">
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://docs.oracle.com/en/database/">
-              <img src="img/oracle-logo.png" alt="Oracle Database" width="120" height="120">
-            </a>
+              <a href="https://dev.mysql.com/doc/">
+                <img src="img/mysql-logo.png" alt="MySQL" width="120" height="90">
+              </a>
           </li>
           <li class="list-inline-item">
             <a href="https://www.postgresql.org/docs/">
@@ -396,6 +411,11 @@
           <li class="list-inline-item">
             <a href="https://www.mongodb.com/docs/">
               <img src="img/mongodb-logo.png" alt="Postgree Database" width="95" height="90">
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://docs.oracle.com/en/database/">
+              <img src="img/oracle-logo.png" alt="Oracle Database" width="120" height="120">
             </a>
           </li>
         </ul>
