--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <span class="text-primary">Felix de Moraes</span>
         </h1>
         <div class="subheading mb-5">Salto, São Paulo, Brasil · (11) 93954-9933 ·
-          <a href="mailto:rafaelfelix1433@gmail.com?Subject=Professional Approach - Java" target="_top">rafaelfelix1433@gmail.com</a>
+          <a href="mailto:rafaelfelix1433@gmail.com?Subject=Professional Approach - Java" target="_top">rafaelmoraes.developer@gmail.com</a>
         </div>
         <p class="lead mb-5">I have experience in create and design solutions and software development for the cloud, using development best pratices and agile frameworks to optimize from the conception process to product delivery, focusing on escalebility, code quality and teamwork.</p>
         <div class="social-icons">
