--- a/index.html
+++ b/index.html
@@ -94,12 +94,32 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Tech Lead | Senior Software Engineer</h3>
+            <div class="subheading mb-3">Bradesco</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Allocation in the technology engineering and innovation team of Credit Products for LATAM</li>
+                <br>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i>
+                Working with agile methodologies to optimize the software construction process, development and evolution.</li>
+                <br>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2024 - Until Now</span>
+          </div>
+        </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Software Engineering Specialist</h3>
             <div class="subheading mb-3">Dock</div>
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Allocation in the technology engineering and innovation team of Credit Products for LATAM</li>
+                Technical leadership of the investment product development and innovation team</li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
@@ -120,7 +140,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2022 - Until Now</span>
+            <span class="text-primary">June 2022 - August 2024</span>
           </div>
         </div>
 
