Adding Azure Certifications

--- a/index.html
+++ b/index.html
@@ -499,6 +499,12 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             AWS Technical Accredited - AWS Certification</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Azure Fundamentals - Microsoft Certification</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Azure Data Fundamentals - Microsoft Certification</li>
           <!--<li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
