--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Allocation in the technology engineering and innovation team of Credit Products for LATAM</li>
+                Technical leadership of the development and innovation investments products team</li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
@@ -119,7 +119,7 @@
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
-                Technical leadership of the investment product development and innovation team</li>
+                Allocation in the technology engineering and innovation team of Credit Products for LATAM</li>
                 <br>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i>
